# ebible_code

./: .env  CLAUDE.md  README.md  hello.py  pyproject.toml
assets/: ATTRIBUTION.md  Gemini_VS_Code_help.txt  Gemini_logging.txt  Gemini_refactoring.txt  Gemini_refactoring2.txt  Gemini_refactoring3.txt  Gemini_refactoring4.txt  Gemini_refactoring5.txt  Gemini_refactoring6.txt  Gemini_refactoring7.txt  Gemini_refactoring8.txt  Gemini_refactoring9.txt  compare_versifications.py  country_code_overrides.csv  country_continent.csv  glottolog_families.csv  language_country_continent.csv  macrolanguage_overrides.csv  parquet_README_template.md  temp_ebible.py  temp_settings_file.py
dataloader_feature/: dataloader notes.txt  dataloader.md  dataloader_notes.md  spec.md  todo.md
ebible_code/: OLD_count_verses.py  OLD_generate_project_vrs.py  analyse_versification.py  compare_versifications.py  corpus_to_parquet.py  dataloader.py  ebible.py  ebible_status.py  generate_language_country_continent.py  generate_project_vrs.py  get_glottolog_families.py  huggingface.py  rename_usfm.py  settings_file.py  update_versifications.py
huggingface_feature/: huggingface.md  spec.md  todo.md
parquet_feature/: PARQUET.md  issues.md  metadata_columns.md  spec.md  todo.md
tests/: smoke_tests.py  test_analyse_versification.py  test_clean_range_markers.py  test_hf_auth.py  test_hf_cli.py  test_hf_download.py  test_hf_tag.py  test_hf_upload.py  test_parquet.py  test_phase1.py  test_phase2.py  test_phase3.py  test_settings_file.py  test_smoke.py  test_versification_unit.py
(+100 files in other folders)
